# Drone_offline_navigation

./: .gitignore  AIplan.md  INSPECTING_IMPROVEMENT_PLAN.md  Navy.txt  PROJECT_ANALYSIS.md  PROJECT_CONTEXT.md  Plan_actions.md  README.md  ToDoPlan.md  build_ros.sh  plan.md  progress.md  run_demo.sh  run_drone.sh  test_gz_service.py
.github/workflows/: ros_build.yml
.mimocode/: .cron-lock
.mimocode/commands/: pipeline-test.md  verify-syntax.md
.mimocode/plans/: 1781895917047-glowing-panda.md  1784349716352-stellar-knight.md  1784463989966-tidy-tiger.md  mavrl-migration-plan.md
.mimocode/skills/mavrl-reference/: SKILL.md
.mimocode/skills/ros2-gazebo-lifecycle/: SKILL.md
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
learning/: .gitignore  CHANGES.md  PROJECT_STATE.md  analyze_logs.py  auto_monitor.py  bc_model.py  callbacks.py  check_shapes.py  check_venv.sh  collect_data.py  collect_expert.py  config.py  curriculum.py  curriculum_metrics.json  diagnostic.py  diagnostic_manual.sh  drone_env.py  inference_node.py  mavrl_inference.py  monitor.py  monitor_report.json  policy.py  recurrent_ppo.py  requirements.txt  reward.py  test_collision.py  train.py  train_lstm.py  training_log.csv  utils.py  vae.py  vec_drone_env.py
learning/depth_data/lstm/: best_lstm.tar
learning/launch/: inference_launch.py  training_launch.py
learning/mavrl_weights/RecurrentPPO_1/: config.yaml  events.out.tfevents.1702657460.0ad34e1b60c5.725657.0
logs/: flight_20260510_201401.csv  flight_20260510_201915.csv  flight_20260510_203043.csv  flight_20260510_203242.csv  flight_20260510_203452.csv  flight_20260510_204522.csv  flight_20260511_151353.csv  flight_20260511_153348.csv  flight_20260511_154208.csv  flight_20260511_154429.csv  flight_20260511_154605.csv  flight_20260511_155644.csv  flight_20260511_160104.csv  flight_20260511_160616.csv  flight_20260511_170825.csv  flight_20260511_202730.csv  flight_20260511_202954.csv  flight_20260511_203358.csv  flight_20260512_190920.csv  flight_20260512_191708.csv  flight_20260512_191909.csv  flight_20260516_190139.csv  flight_20260516_190943.csv  flight_20260516_191944.csv  flight_20260516_192024.csv  flight_20260516_192603.csv  flight_20260516_193410.csv  flight_20260516_193500.csv  flight_20260516_193658.csv  flight_20260516_194624.csv  flight_20260516_195145.csv  flight_20260516_195608.csv  flight_20260516_200755.csv  flight_20260516_201800.csv  flight_20260516_202834.csv  flight_20260516_203113.csv  flight_20260516_203231.csv  flight_20260516_213548.csv  flight_20260516_214508.csv  flight_20260516_215341.csv  (+26 more)
scripts/: gentle_cave.py  procedural_cave.py  record_stereo.py  stereo_viz.py  straight_cave.py  test_logic.py  verify_safety.sh
src/drone_control/: package.xml  setup.py
src/drone_control/drone_control/: control_node.py
src/drone_navigation/: CMakeLists.txt  package.xml
src/drone_navigation/launch/: navigation_launch.py
src/drone_navigation/src/: navigation_node.cpp
src/drone_perception/: CMakeLists.txt  package.xml
src/drone_perception/src/: perception_node.cpp
src/drone_simulation/: CMakeLists.txt  package.xml
src/drone_simulation/launch/: simulation_launch.py  spawn_drone.launch.py
src/drone_simulation/rviz/: drone_config.rviz
src/drone_simulation/urdf/: rescue_drone.urdf.xacro
src/drone_simulation/worlds/: cave.world
